added timer page

--- a/HelpDuck/src/main/resources/static/css/style.css
+++ b/HelpDuck/src/main/resources/static/css/style.css
@@ -147,3 +147,301 @@ i {
 	align-items: center;
 	justify-content: space-evenly;
 }
+.post-it {
+ 	width:250px;
+  position:relative;
+  background:#ffa;
+  overflow:hidden;
+  margin:30px auto;
+  padding:20px;
+  border-radius:0 0 0 30px/45px;
+  box-shadow:
+    inset 0 -40px 40px rgba(0,0,0,0.2),
+    inset 0 25px 10px rgba(0,0,0,0.2),
+    0 5px 6px 5px rgba(0,0,0,0.2);
+  line-height:1.7em;
+  font-size:19px;
+  -webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC);
+
+  color:#130d6b;
+}
+
+.post-it li {
+ 	cursor:pointer; 
+}
+
+.post-it:before {
+ 	content:"";
+  display:block;
+  position:absolute;
+  width:20px;
+  height:25px;
+  background:#ffa;
+  box-shadow:
+    3px -2px 10px rgba(0,0,0,0.2),
+    inset 15px -15px 15px rgba(0,0,0,0.3);
+  left:0;
+  bottom:0;
+  z-index:2;
+  transform:skewX(25deg);
+}
+
+.post-it:after {
+ 	content:"";
+  display:block;
+  position:absolute;
+  width:75%;
+  height:20px; 
+  border-top:3px solid #130d6b;
+  border-radius: 50% ;
+  bottom:0px;
+  left:10%;
+}
+
+.done {
+ 	text-decoration:line-through; 
+}
+
+h1 {
+ 	font-size:25px; 
+  position:relative;
+}
+.duck {
+  --c: #f9d41f;
+  --b: #f09123;
+  margin: auto auto 0;
+  width: 350px;
+  aspect-ratio: 1;
+  position: relative;
+  z-index: 0;
+  cursor: pointer;
+}
+.duck:after {
+  content: "";
+  position: absolute;
+  width: 40%;
+  height: 20%;
+  left: 35%;
+  top: 30%;
+  z-index: -1;
+  background: 
+    radial-gradient(violet 63%, #0000 71%) 20% 20%/10% 20%,
+    linear-gradient(violet 0 0) 50% 71%/10% 10%,
+    conic-gradient(violet 45deg, #0000 0) 69% 50%/ 30% 30%,
+    conic-gradient(from -19deg, violet 45deg, #0000 0) 20% 80%/ 30% 30%,
+    linear-gradient(violet 0 0) 50% 29%/5% 20%;
+  background-repeat: no-repeat;
+  filter: 
+    drop-shadow(0 0 0 #24e0e9) 
+    drop-shadow(0 0 0 #00d18f)    
+    drop-shadow(0 0 0 #f7d865) 
+    drop-shadow(0 0 0 #fc639d)   
+    drop-shadow(0 0 0 #00d18f) 
+    drop-shadow(0 0 0 #24e0e9);
+}
+.duck:before {
+  content: "";
+  position: absolute;
+  background: var(--c);
+  border: 9px solid var(--b);
+  border-bottom: 0;
+  inset: 53% 8% 0% 8%;
+  border-radius: 999px 999px 0 0;
+}
+.duck .arms:before {
+  content: "";
+  position: absolute;
+  width: 15%;
+  height: 32%;
+  background: var(--c);
+  box-sizing: border-box;
+  left: 17%;
+  bottom: 2%;
+  border-radius: 30% 35% 50% 50%;
+  border: 9px solid var(--b);
+  transform: rotate(33deg);
+  transform-origin: top left;
+}
+.duck .arms:after {
+  content: "";
+  position: absolute;
+  width: 12%;
+  height: 28%;
+  background: var(--c);
+  box-sizing: border-box;
+  right: 15%;
+  bottom: 5%;
+  border-radius: 30% 35% 50% 50%;
+  border: 9px solid var(--b);
+  transform: rotate(-33deg);
+  z-index: -1;
+  transform-origin: top right;
+}
+.duck .head:before,
+.duck .head:after {
+  content: "";
+  position: absolute;
+  inset: 12% 10% 14% 10%;
+  background: var(--c);
+  border-radius: 50%;
+  border: 9px solid var(--b);
+  border-bottom-color: #0000;
+  z-index: 3;
+}
+.duck .head:before {
+  clip-path: polygon(0 100%,100% 100%,100% 30%,70% 15%,57% 28%,40% 18%,23% 30%,0 17%);
+}
+.duck .head:after {
+  clip-path: polygon(0 0,100% 0,100% 30%,93% 30%,70% 15%,57% 28%,40% 18%,23% 30%,0 17%);
+  transform: rotate(0deg);
+  transform-origin: 94% 27%;
+  transition: .5s;
+}
+.duck .eyes:before,
+.duck .eyes:after {
+  content: "";
+  position: absolute;
+  width: 9%;
+  height: 10%;
+  background: 
+    radial-gradient(farthest-side, #fff 94%, #0000) 20% 16%
+    content-box no-repeat,#000;
+  background-size: 30% 30%;
+  border-radius: 50%;
+  left: 32%;
+  top: 44%;
+  box-sizing: border-box;
+  padding: 1%;
+  transform: rotate(6deg);
+  z-index: 4;
+  transition: 0.4s;
+}
+.duck .eyes:after {
+  width: 8%;
+  left: auto;
+  right: 20%;
+  top: 43%;
+  transform: rotate(-6deg);
+}
+.duck .mouth:before {
+  content: "";
+  position: absolute;
+  z-index: 9;
+  inset: 57% 28% 33% 43%;
+  border-radius: 25px 25px 42px 49px;
+  padding: 2.5%;
+  border: 6px solid #c23a00;
+  background: linear-gradient(#791004 0 0) content-box, #f55e1e;
+  transition: 0.4s linear;
+}
+.duck .mouth:after {
+  content: "";
+  position: absolute;
+  width: 12%;
+  height: 5.9%;
+  right: 26%;
+  top: 57%;
+  box-sizing: border-box;
+  border: 5px solid #c23a00;
+  border-bottom-color: #791004;
+  border-left: 0;
+  background: #f55e1e;
+  border-radius: 0 50% 50% 0;
+  z-index: 10;
+}
+.duck .mouth i {
+  position: absolute;
+  width: 14%;
+  height: 14%;
+  border: 6px solid #c23a00;
+  border-right: 0;
+  border-bottom: 0;
+  border-radius: 41% 0 0 0;
+  background: #f55e1e;
+  transform: rotate(45deg);
+  clip-path: polygon(0 0, 96% 0, -4% 100%);
+  top: 51.5%;
+  left: 51%;
+  z-index: 11;
+}
+#duck {
+  position: absolute;
+  top: -9999px;
+}
+#duck:checked + .duck:after {
+  filter: 
+    drop-shadow(43px -23px 0 #24e0e9) 
+    drop-shadow(-59px 4px 0 #00d18f)    
+    drop-shadow(41px 62px 0 #f7d865) 
+    drop-shadow(67px -68px 0 #fc639d)   
+    drop-shadow(-100px -36px 0 #00d18f) 
+    drop-shadow(40px -55px 0 #24e0e9);
+  top: 0%;
+  opacity: 0;
+  transition: 0.5s 0.6s, opacity 0.3s 0.8s;
+}
+#duck:checked + .duck .head:after {
+  transform: rotate(120deg);
+  transition: .5s .4s;
+}
+#duck:checked + .duck .eyes:before,
+#duck:checked + .duck .eyes:after {
+  background-size: 100% 100%;
+  transform: scale(1.1) rotate(6deg);
+  transition: 0.4s cubic-bezier(0.12, 0.69, 0.72, 2.2);
+}
+#duck:checked + .duck .eyes:after {
+  transform: scale(1.1) rotate(-6deg);
+}
+#duck:checked + .duck .mouth:before {
+  inset: 57% 28% 10% 43%;
+  transition: 0.4s cubic-bezier(0.12, 0.69, 0.72, 2.2);
+}
+#duck:checked + .duck .arms:before {
+  transform: rotate(33.1deg);
+  transition: cubic-bezier(0, 200, 1, 200) 0.4s;
+}
+#duck:checked + .duck .arms:after {
+  transform: rotate(-33.1deg);
+  transition: cubic-bezier(0, 200, 1, 200) 0.4s;
+}
+.timer {
+  font-family: sans-serif;
+  display: inline-block;
+  padding: 24px 32px;
+  border-radius: 30px;
+  background: white;
+}
+
+.timer__part {
+  font-size: 36px;
+  font-weight: bold;
+}
+
+.timer__btn {
+  width: 50px;
+  height: 50px;
+  margin-left: 16px;
+  border-radius: 50%;
+  border: none;
+  color: white;
+  background: #8208e6;
+  cursor: pointer;
+}
+
+.timer__btn--start {
+  background: #00b84c;
+}
+
+.timer__btn--stop {
+  background: #ff0256;
+}
+.timer-container {
+	display: flex;
+	flex-direction: row;
+}
+.timer-music {
+	display:flex;
+	flex-direction:column;
+	align-items:center;
+}
